# candle-einops

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  ticketsplease.toml
.github/: MSRV_POLICY.md  RELEASE_CHECKLIST.md
.github/scripts/: compare_benchmarks.py  generate_performance_report.py  run_benchmarks.py  summarize_reference_gaps.py  test_compare_benchmarks.py  test_generate_performance_report.py  test_published_artifacts.py  test_python_parity.py  test_run_benchmarks.py  test_summarize_reference_gaps.py  test_validate_performance_harness_policy.py  validate_artifact_policy.py  validate_ci_policy.py  validate_einsum_release.py  validate_performance_harness_policy.py  validate_python_parity_policy.py
.github/workflows/: advisory-performance.yml  ci.yml
.ticketsplease/recipes/: split.toml  supersede.toml
.ticketsplease/templates/: audit.md  default.md
benchmarks/: Cargo.toml  README.md  broadcast-gemm-spike.md  diagonal-lowering-spike.md  extrema-lowering-spike.md  nary-cost-model-spike.md  permute-compose-layout-spike.md  zero-k-submission-spike.md
benchmarks/benches/: measurement.rs
benchmarks/data/: performance-2026-07-16.json
benchmarks/reporting/: README.md  pyproject.toml
benchmarks/src/: binary_operand_packing.rs  broadcast_gemm_spike.rs  diagonal_spike.rs  extended_compose.rs  extrema_spike.rs  lib.rs  nary_cost_model_spike.rs  permute_compose_layout_spike.rs
benchmarks/tests/: broadcast_gemm_spike.rs  contract.rs  device_capabilities.rs  device_diagnostics.rs  device_selection.rs  diagonal_spike.rs  extrema_selection.rs  extrema_spike.rs  nary_cost_model_spike.rs  permute_compose_layout_spike.rs  product_strategy.rs  result_schema_v2.rs  zero_k_spike.rs
candle-einops-macros/: Cargo.toml  LICENSE-MIT
candle-einops-macros/src/: einops.rs  einsum.rs  lib.rs
candle-einops-macros/src/einops/: parse.rs  properties.rs  tokens.rs
candle-einops-macros/src/einsum/: properties.rs
candle-einops-macros/tests/: dependency_names.rs  ui.rs
candle-einops-macros/tests/fixtures/hygiene/: Cargo.toml
candle-einops-macros/tests/fixtures/hygiene-ignored-len/: Cargo.toml
candle-einops-macros/tests/fixtures/hygiene-ignored-len/src/: main.rs
candle-einops-macros/tests/fixtures/hygiene/src/: main.rs
candle-einops-macros/tests/fixtures/keyword-alias/: Cargo.toml
candle-einops-macros/tests/fixtures/keyword-alias/src/: main.rs
candle-einops-macros/tests/fixtures/normal/: Cargo.toml
candle-einops-macros/tests/fixtures/normal/src/: main.rs
candle-einops-macros/tests/fixtures/renamed/: Cargo.toml
candle-einops-macros/tests/fixtures/renamed/src/: main.rs
candle-einops-macros/tests/ui/fail/: decomposition-literal-overflow.rs  decomposition-literal-overflow.stderr  duplicate-axis.rs  duplicate-axis.stderr  duplicate-ellipsis.rs  duplicate-ellipsis.stderr  duplicate-new-axis.rs  duplicate-new-axis.stderr  duplicate-new-braced-axis.rs  duplicate-new-braced-axis.stderr  duplicate-new-mixed-axis.rs  duplicate-new-mixed-axis.stderr  duplicate-reduced-axis.rs  duplicate-reduced-axis.stderr  duplicate-reduced-ellipsis.rs  duplicate-reduced-ellipsis.stderr  einsum-duplicate-output.rs  einsum-duplicate-output.stderr  einsum-ellipsis.rs  einsum-ellipsis.stderr  einsum-equation-input-count.rs  einsum-equation-input-count.stderr  einsum-invalid-label.rs  einsum-invalid-label.stderr  einsum-missing-arrow.rs  einsum-missing-arrow.stderr  einsum-missing-operand.rs  einsum-missing-operand.stderr  einsum-multiple-arrows.rs  einsum-multiple-arrows.stderr  einsum-operand-count.rs  einsum-operand-count.stderr  einsum-output-ellipsis-without-input.rs  einsum-output-ellipsis-without-input.stderr  einsum-repeated-input.rs  einsum-repeated-input.stderr  einsum-unknown-output.rs  einsum-unknown-output.stderr  empty-composition.rs  empty-composition.stderr  (+24 more)
candle-einops-macros/tests/ui/pass/: rearrange.rs
docs/: einsum-contract.md  performance.md
parity/: .gitignore  README.md  oracle.py  pyproject.toml
parity/runner/: Cargo.toml
parity/runner/src/: lib.rs  main.rs
parity/runner/tests/: bridge.rs  einsum_parity.rs  rearrange_parity.rs  repeat_reduce_parity.rs
parity/tests/: test_oracle.py
src/: backend.rs  einsum.rs  lib.rs
tests/: behavior.rs  decomposition_arithmetic.rs  einops.rs  einsum.rs  einsum_binary.rs  einsum_diagonal.rs  einsum_ellipsis.rs  einsum_nary.rs  einsum_oracle.rs  einsum_semantic_matrix.rs  einsum_unary.rs  einsum_zero_k_autograd.rs  errors.rs  fused_permute_compose.rs  gradients.rs  identity_reshape.rs  properties.rs  reduction_fusion.rs  repeat_broadcast_view.rs  runtime_rank_shape.rs  semantic_expansion.rs
tickets/: add-layout-aware-binary-einsum-operand-packing.md  advisory-performance-comparison-ci.md  benchmark-device-diagnostics.md  benchmark-device-profile-ci.md  benchmark-device-selection-contract.md  benchmark-device-support.md  benchmark-gpu-capture-command.md  benchmark-methodology-hardening.md  benchmark-result-schema-v2.md  benchmark-scenario-device-capabilities.md  candle-011-baseline.md  candle-style-errors.md  ci-release-hygiene.md  ci-supply-chain-platform-hardening.md  close-reference-performance-gaps.md  collapsed-extrema-provider-regression.md  correct-canonical-broadcast-gemm-lowering.md  cpu-layout-consumption-overhead.md  cpu-leading-extrema-overhead.md  cpu-product-association-overhead.md  cpu-trailing-extrema-overhead.md  cpu-zero-k-fixed-overhead.md  cuda-simple-einsum-dispatch-overhead.md  cuda-view-consumption-overhead.md  decomposition-arithmetic-safety.md  device-calibrated-nary-planner.md  dsl-axis-invariants.md  edge-shape-dtype-properties.md  einsum-binary-fastpaths.md  einsum-binary-gemm-slice.md  einsum-broadcast-gemm-lowering.md  einsum-broadcast-gemm-spike.md  einsum-contract-oracles.md  einsum-device-dtype-gradient-matrix.md  einsum-diagonal-fastpath.md  einsum-diagonal-lowering-spike.md  einsum-diagonal-slice.md  einsum-ellipsis-slice.md  einsum-nary-cost-model-spike.md  einsum-nary-greedy-planner.md  (+51 more)
(+51 files in other folders)
