[package]
name = "candle-einops-macros"
version = "0.1.0"
authors = ["Thomas Santerre <thomas@santerre.xyz>"]
edition = "2021"
description = " Pure rust implementation of the python einops package for the Candle ML library "
license = "MIT OR Apache-2.0"
keywords = ["tensor", "candle", "einops", "machine-learning", "ai"]
categories = ["algorithms", "science", "mathematics"]
exclude = [".github/"]
repository = "https://github.com/tomsanbear/candle-einops"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
