[package]
name = "candle-einops-macros"
version = "0.2.0"
authors = ["tomsanbear <thomas@santerre.xyz>"]
edition = "2024"
rust-version = "1.94"
description = "Procedural macros for candle-einops tensor transformations and einsum"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/candle-einops"
readme = "../README.md"
keywords = ["tensor", "candle", "einops", "machine-learning", "ai"]
categories = ["algorithms", "science", "mathematics"]
exclude = [".github/", "tests/dependency_names.rs", "tests/fixtures/**"]
repository = "https://github.com/tomsanbear/candle-einops"

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.5"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = "1"
