[workspace]

[package]
name = "candle-einops-parity-runner"
version = "0.0.0"
edition = "2024"
rust-version = "1.94"
publish = false

[dependencies]
candle-core = "0.11"
candle-einops = { path = "../.." }
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "candle-einops-parity-runner"
path = "src/main.rs"
